--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
   "devDependencies": {
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.3",
-    "babel-plugin-add-module-exports": "^0.2.1",
+    "babel-plugin-add-module-exports": "^1.0.0",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-decorators-legacy": "^1.3.5",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
@@ -57,12 +57,12 @@
     "statics-plugin-description": "^0.0.10",
     "statics-plugin-react": "^0.0.10",
     "statics-plugin-toc": "^0.0.10",
-    "teakit": "^0.0.2",
-    "teasim-analyzation": "^5.0.2-2",
-    "teasim-document": "^5.0.2-2",
-    "teasim-icon": "^5.0.2-2",
-    "teasim-statics": "^5.0.2-2",
-    "teasim-stylers": "^5.0.2-2",
+    "teakit": "^0.0.3",
+    "teasim-analyzation": "^5.0.3-alpha.1",
+    "teasim-document": "^5.0.3-alpha.1",
+    "teasim-icon": "^5.0.3-alpha.1",
+    "teasim-statics": "^5.0.3-alpha.1",
+    "teasim-stylers": "^5.0.3-alpha.1",
     "yiqilaiui": "^0.0.1-2"
   },
   "version": "0.1.6",
