--- a/package.json
+++ b/package.json
@@ -9,14 +9,14 @@
     "build": "cross-env NODE_ENV=production statics build"
   },
   "dependencies": {
-    "@teakit/statics": "^0.0.6",
     "statics-plugin-description": "^0.1.2",
     "statics-plugin-renderer": "^0.1.2",
     "statics-plugin-toc": "^0.1.2",
     "teakit": "^0.0.3",
     "teasim": "^5.1.6",
     "teasim-analyzation": "^5.1.6",
-    "teasim-icon": "^5.1.6"
+    "teasim-icon": "^5.1.6",
+    "teasim-statics": "^5.1.6"
   },
   "devDependencies": {
     "cross-env": "^5.2.0"
